--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
         <ul class="navigation">
             <li>
-                <a href="#">
-                    <ion-icon name="person-outline"></ion-icon>
-                    Edit Profile
+                <a href="https://t.me/mmmmoooohhhhsssseeeennnn">
+                    <ion-icon name="paper-plane"></ion-icon>
+                    Telegram
                 </a>
             </li>
             <li>
